# invenio-collections

./: .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.invenio.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
examples/: app.py
invenio_collections/: __init__.py  admin.py  api.py  cache.py  cli.py  collections_2015_07_14_innodb.py  config.py  decorators.py  errors.py  ext.py  forms.py  models.py  percolator.py  proxies.py  query.py  receivers.py  searchapp.py  tasks.py  utils.py  version.py  views.py  webpack.py
invenio_collections/alembic/: 1748509182_create_collections_branch.py  1777139066_remove_nullable.py  3c1b8d0e7f52_rename_community_id_to_namespace_id.py  3d3604b9f140_add_override_column.py  425b691f768b_create_collections_tables.py  97faa437d867_create_collections_tables.py  ce7adcbe1c6c_create_collections_branch.py  d2f434c0ac92_change_datetime_types.py
invenio_collections/assets/semantic-ui/js/invenio_collections/api/: CollectionsContextProvider.js  CommunityLinksExtractor.js  api.js  serializers.js
invenio_collections/assets/semantic-ui/js/invenio_collections/collections/: CollectionTreeCardGroup.js  CollectionTreeManager.js  CollectionTrees.js  Configs.js  index.js  utils.js
invenio_collections/assets/semantic-ui/js/invenio_collections/collections/actions/: DeleteCollectionAction.js  DeleteCollectionTreeAction.js  index.js
invenio_collections/assets/semantic-ui/js/invenio_collections/collections/components/: CollectionActionMenu.js  CollectionBrowseCard.js  CollectionChildItem.js  CollectionItem.js  CollectionTreeBrowseView.js  CollectionTreeSection.js  EmptyMessage.js  NestedCollectionItem.js  PlaceholderLoader.js  ReorderableList.js
invenio_collections/assets/semantic-ui/js/invenio_collections/collections/forms/: CollectionForm.js  CollectionFormContainer.js  CollectionTreeForm.js  CollectionTreeFormContainer.js  NewChildCollectionForm.js  NewCollectionForm.js  NewCollectionTreeForm.js  UpdateCollectionForm.js  UpdateCollectionTreeForm.js
invenio_collections/assets/semantic-ui/js/invenio_collections/collections/modals/: CollectionFormModal.js  CollectionTreeFormModal.js  DeleteCollectionModal.js  DeleteCollectionTreeModal.js  index.js
invenio_collections/assets/semantic-ui/translations/invenio_collections/: i18next-scanner.config.js  i18next.js  package-lock.json  package.json  translations.pot
invenio_collections/assets/semantic-ui/translations/invenio_collections/messages/: _generatedTranslations.js  index.js
invenio_collections/assets/semantic-ui/translations/invenio_collections/messages/da/: messages.po
invenio_collections/assets/semantic-ui/translations/invenio_collections/messages/de/: translations.json
invenio_collections/assets/semantic-ui/translations/invenio_collections/messages/en/: messages.po  translations.json
invenio_collections/assets/semantic-ui/translations/invenio_collections/scripts/: compileCatalog.js  fixTrailingNewlines.js  initCatalog.js  postExtractMessages.js
invenio_collections/contrib/: __init__.py  dojson.py
invenio_collections/contrib/search/: __init__.py  collection_filter.py
invenio_collections/recordext/functions/: get_record_collections.py
invenio_collections/resources/: __init__.py  config.py  resource.py
invenio_collections/services/: __init__.py  config.py  links.py  results.py  schema.py  service.py
invenio_collections/tasks/: index.py
invenio_collections/templates/invenio_collections/: base.html  index.html
invenio_collections/templates/semantic-ui/invenio_collections/: collections.html
invenio_collections/tests/: test_contrib_dojson.py  test_models.py
invenio_collections/translations/: invenio.pot  messages.pot
invenio_collections/translations/cs/LC_MESSAGES/: messages.po
invenio_collections/translations/da/LC_MESSAGES/: messages.po
invenio_collections/translations/de/LC_MESSAGES/: messages.po
invenio_collections/translations/es/LC_MESSAGES/: messages.po
invenio_collections/translations/fr/LC_MESSAGES/: messages.po
invenio_collections/translations/it/LC_MESSAGES/: messages.po
invenio_collections/upgrades/: collections_2015_05_28_recjson_tag_value.py  collections_2015_07_14_innodb.py
invenio_collections/views/: __init__.py  admin.py  collections.py  ui.py
tests/: __init__.py  conftest.py  test_admin.py  test_alembic.py  test_api.py  test_cli.py  test_contrib_dojson.py  test_invenio_collections.py  test_percolator.py  test_receivers.py  test_record_signals.py  test_schemas.py  test_service.py  test_service_limits.py  test_tasks.py
tests/data/: __init__.py
tests/data/records/: record-v1.0.0.json
tests/data/v5/records/: record-v1.0.0.json
tests/mock_module/: blueprint.py  ext.py
